--- a/CONFIG
+++ b/CONFIG
@@ -1,12 +1,13 @@
 #CONFIGURATION
-#Wed Apr 23 18:20:57 VET 2014
-SKIN_GUI=TRUE
-OS=Windows 7
-TRANSLATE_PATH=translate/
-TRANSLATE=es_VE
-INIT_GUI_MAXIMIZED=FALSE
+#Tue May 20 11:35:32 VET 2014
+HOST_SERVER=127.0.0.1
 APP_LICENSE=GNU General Public License
+OS_ARCH=i386
+HOST_PORT=8101
+TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
-PATH_LIBARIA=/usr/local/Aria/lib/
-OS_ARCH=x86
+TRANSLATE_PATH=translate/
+INIT_GUI_MAXIMIZED=FALSE
 APP_NAME=Aria Java P3DX
+PATH_LIBARIA=/usr/local/Aria/lib/
+OS=Linux
