--- a/CONFIG
+++ b/CONFIG
@@ -1,6 +1,6 @@
 #CONFIGURATION
-#Tue May 20 11:35:32 VET 2014
-HOST_SERVER=127.0.0.1
+#Sun Jul 06 20:45:57 VET 2014
+HOST_SERVER=localhost
 APP_LICENSE=GNU General Public License
 OS_ARCH=i386
 HOST_PORT=8101
@@ -8,6 +8,6 @@ TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 TRANSLATE_PATH=translate/
 INIT_GUI_MAXIMIZED=FALSE
-APP_NAME=Aria Java P3DX
 PATH_LIBARIA=/usr/local/Aria/lib/
+APP_NAME=Aria Java P3DX
 OS=Linux
