--- a/CONFIG
+++ b/CONFIG
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Mon Jul 07 22:28:32 VET 2014
+#Mon Aug 18 20:04:50 VET 2014
 HOST_SERVER=localhost
 APP_LICENSE=GNU General Public License
 OS_ARCH=i386
@@ -8,6 +8,7 @@ TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 TRANSLATE_PATH=translate/
 INIT_GUI_MAXIMIZED=FALSE
-APP_NAME=Aria Java P3DX
 PATH_LIBARIA=/usr/local/Aria/lib/
+APP_NAME=Aria Java P3DX
 OS=Linux
+JAVA_VERSION=1.7.0_65
