--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,8 +1,8 @@
 #CONFIGURATION
-#Thu Aug 21 16:43:26 VET 2014
+#Thu Aug 21 21:41:29 VET 2014
 HOST_SERVER=localhost
 APP_LICENSE=GNU General Public License
-OS_ARCH=x86
+OS_ARCH=i386
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
@@ -10,5 +10,5 @@ TRANSLATE_PATH=translate/
 INIT_GUI_MAXIMIZED=FALSE
 APP_NAME=Aria Java P3DX
 PATH_LIBARIA=/usr/local/Aria/lib/
-OS=Windows 7
-JAVA_VERSION=1.7.0_60
+OS=Linux
+JAVA_VERSION=1.8.0_11
