Avances al cargar mapa

--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,8 +1,9 @@
 #CONFIGURATION
-#Thu Aug 21 21:41:29 VET 2014
+#Fri Aug 22 16:01:47 VET 2014
 HOST_SERVER=localhost
 APP_LICENSE=GNU General Public License
-OS_ARCH=i386
+OS_ARCH=x86
+ANTIALIASING=true
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
@@ -10,5 +11,5 @@ TRANSLATE_PATH=translate/
 INIT_GUI_MAXIMIZED=FALSE
 APP_NAME=Aria Java P3DX
 PATH_LIBARIA=/usr/local/Aria/lib/
-OS=Linux
-JAVA_VERSION=1.8.0_11
+OS=Windows 7
+JAVA_VERSION=1.7.0_60
