Avances en carga de mapa

--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,15 +1,17 @@
 #CONFIGURATION
-#Fri Aug 22 16:01:47 VET 2014
+#Sun Aug 24 17:33:00 VET 2014
+GUI_MAXIMIZED=true
 HOST_SERVER=localhost
+GUI_THEME=
 APP_LICENSE=GNU General Public License
-OS_ARCH=x86
-ANTIALIASING=true
+PATH_IMAGES=images/
+OS_ARCH=i386
+ANTIALIASING=false
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
-TRANSLATE_PATH=translate/
-INIT_GUI_MAXIMIZED=FALSE
-APP_NAME=Aria Java P3DX
+PATH_TRANSLATE=translate/
 PATH_LIBARIA=/usr/local/Aria/lib/
-OS=Windows 7
-JAVA_VERSION=1.7.0_60
+APP_NAME=Aria Java P3DX
+OS=Linux
+JAVA_VERSION=1.7.0_65
