Agregada proporci?n a la animaci?n, para que los mapas pueden ser m?s peque?os

--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,16 +1,17 @@
 #CONFIGURATION
-#Sun Aug 24 22:29:19 VET 2014
+#Mon Aug 25 15:52:21 VET 2014
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
+ANIMATION_PROPORTION=10
 APP_LICENSE=GNU General Public License
 PATH_IMAGES=images/
-OS_ARCH=i386
-ANTIALIASING=false
+OS_ARCH=x86
+ANTIALIASING=true
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 PATH_TRANSLATE=translate/
-PATH_LIBARIA=/usr/local/Aria/lib/
 APP_NAME=Aria Java P3DX
-OS=Linux
-JAVA_VERSION=1.7.0_65
+PATH_LIBARIA=/usr/local/Aria/lib/
+OS=Windows 7
+JAVA_VERSION=1.7.0_60
