Agregado margen al mapa para su mejor apreciacion

--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,18 +1,18 @@
 #CONFIGURATION
-#Mon Aug 25 16:46:01 VET 2014
+#Mon Aug 25 20:28:06 VET 2014
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
 ANIMATION_PROPORTION=20
 APP_LICENSE=GNU General Public License
 PATH_IMAGES=images/
-OS_ARCH=x86
+OS_ARCH=i386
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 PATH_TRANSLATE=translate/
-ANIMATION_ANTIALIASING=false
-APP_NAME=Aria Java P3DX
+ANIMATION_ANTIALIASING=true
 PATH_LIBARIA=/usr/local/Aria/lib/
-OS=Windows 7
+APP_NAME=Aria Java P3DX
+OS=Linux
+JAVA_VERSION=1.7.0_65
 ANIMATION_STROKESIZE=2
-JAVA_VERSION=1.7.0_60
