--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,18 +1,19 @@
 #CONFIGURATION
-#Tue Aug 26 20:47:20 VET 2014
-GUI_MAXIMIZED=true
+#Sun Aug 31 14:32:28 VET 2014
+GUI_MAXIMIZED=false
 HOST_SERVER=localhost
-ANIMATION_PROPORTION=25
+ANIMATION_PROPORTION=15
 APP_LICENSE=GNU General Public License
+ANIMATION_POSITIONUPDATERATE=10
 PATH_IMAGES=images/
 OS_ARCH=i386
 HOST_PORT=8101
 TRANSLATE=es_VE
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 PATH_TRANSLATE=translate/
-ANIMATION_ANTIALIASING=false
+ANIMATION_ANTIALIASING=true
 APP_NAME=Aria Java P3DX
 PATH_LIBARIA=/usr/local/Aria/lib/
 OS=Linux
-ANIMATION_STROKESIZE=3
+ANIMATION_STROKESIZE=1
 JAVA_VERSION=1.7.0_65
