--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/miglayout-4.0-swing.jar"/>
-	<classpathentry kind="lib" path="lib/Aria.jar"/>
+	<classpathentry kind="lib" path="/usr/local/Aria/java/Aria.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
