--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Sat Sep 06 10:44:54 VET 2014
+#Sat Sep 06 13:21:24 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Linux
 TRANSLATE=es_VE
@@ -14,7 +14,7 @@ APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
 PATH_LIBARIA=/usr/local/Aria/lib/
 GUI_MAXIMIZED=false
-HOST_SERVER=localhost
+HOST_SERVER=10.0.126.11
 JAVA_VERSION=1.7.0_65
 OS_ARCH=i386
 APP_NAME=Aria Java P3DX
