--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Sat Sep 06 13:21:24 VET 2014
+#Sun Sep 07 18:10:48 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Linux
 TRANSLATE=es_VE
@@ -9,12 +9,12 @@ PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
 APP_LICENSE=GNU General Public License
 ANIMATION_PROPORTION=25
-ANIMATION_ANTIALIASING=true
+ANIMATION_ANTIALIASING=false
 APP_AUTHOR=SAUL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
 PATH_LIBARIA=/usr/local/Aria/lib/
 GUI_MAXIMIZED=false
-HOST_SERVER=10.0.126.11
+HOST_SERVER=localhost
 JAVA_VERSION=1.7.0_65
 OS_ARCH=i386
 APP_NAME=Aria Java P3DX
