--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,20 +1,21 @@
 #CONFIGURATION
-#Sun Sep 07 18:10:48 VET 2014
+#Tue Oct 07 17:17:04 VET 2014
 ANIMATION_STROKESIZE=2
-OS=Linux
+OS=Windows 7
 TRANSLATE=es_VE
-ANIMATION_POSITIONUPDATERATE=5
 HOST_PORT=8101
+ANIMATION_MINPROPORTION=10
 PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
+ANIMATION_FPS=24
 APP_LICENSE=GNU General Public License
-ANIMATION_PROPORTION=25
-ANIMATION_ANTIALIASING=false
-APP_AUTHOR=SAUL PIÑA, JORGE PARRA
+ANIMATION_PROPORTION=11
+ANIMATION_ANTIALIASING=true
+APP_AUTHOR=SAUL PIёA, JORGE PARRA
 LOG_LEVEL=DEVEL
-PATH_LIBARIA=/usr/local/Aria/lib/
+PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=false
 HOST_SERVER=localhost
-JAVA_VERSION=1.7.0_65
-OS_ARCH=i386
+JAVA_VERSION=1.7.0_25
+OS_ARCH=x86
 APP_NAME=Aria Java P3DX
