--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,6 +1,6 @@
 #CONFIGURATION
-#Wed Oct 08 16:32:13 VET 2014
-ANIMATION_STROKESIZE=1
+#Sun Oct 12 11:54:27 VET 2014
+ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
 HOST_PORT=8101
@@ -9,13 +9,14 @@ PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
 ANIMATION_FPS=24
 APP_LICENSE=GNU General Public License
-ANIMATION_PROPORTION=29
+ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=false
 APP_AUTHOR=SAUL PIёA, JORGE PARRA
 LOG_LEVEL=DEVEL
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
-GUI_MAXIMIZED=false
+GUI_MAXIMIZED=true
 HOST_SERVER=localhost
-JAVA_VERSION=1.7.0_60
 OS_ARCH=x86
+JAVA_VERSION=1.7.0_25
 APP_NAME=Aria Java P3DX
+ROBOT_MAXSPEED=500
