Merge, union de rama principaal con rama que posee calculo de ruta

--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,20 +1,23 @@
 #CONFIGURATION
-#Sun Oct 12 21:09:11 VET 2014
+#Tue Oct 14 12:13:09 VET 2014
 ANIMATION_STROKESIZE=2
-OS=Linux
+OS=Windows 7
 TRANSLATE=es_VE
-ANIMATION_POSITIONUPDATERATE=5
+ANIMATION_POSITIONUPDATERATE=10
 HOST_PORT=8101
+ANIMATION_MINPROPORTION=10
 PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
+ANIMATION_FPS=24
 APP_LICENSE=GNU General Public License
-ANIMATION_PROPORTION=25
-ANIMATION_ANTIALIASING=true
-APP_AUTHOR=SAUL PIÑA, JORGE PARRA
+ANIMATION_PROPORTION=30
+ANIMATION_ANTIALIASING=false
+APP_AUTHOR=SAUL PIёA, JORGE PARRA
 LOG_LEVEL=DEVEL
-PATH_LIBARIA=/usr/local/Aria/lib/
-GUI_MAXIMIZED=false
-HOST_SERVER=127.0.0.1
-JAVA_VERSION=1.8.0_20
-OS_ARCH=i386
+PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
+GUI_MAXIMIZED=true
+HOST_SERVER=localhost
+JAVA_VERSION=1.7.0_60
+OS_ARCH=x86
 APP_NAME=Aria Java P3DX
+ROBOT_MAXSPEED=500
