--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Tue Oct 14 12:13:09 VET 2014
+#Thu Nov 13 13:12:40 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
@@ -12,12 +12,12 @@ ANIMATION_FPS=24
 APP_LICENSE=GNU General Public License
 ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=false
-APP_AUTHOR=SAUL PIёA, JORGE PARRA
+APP_AUTHOR=SAUL PINA, JORGE PARRA
 LOG_LEVEL=DEVEL
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
-JAVA_VERSION=1.7.0_60
+JAVA_VERSION=1.7.0_25
 OS_ARCH=x86
 APP_NAME=Aria Java P3DX
 ROBOT_MAXSPEED=500
