--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Thu Nov 13 13:12:40 VET 2014
+#Fri Nov 14 23:07:12 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
@@ -12,7 +12,7 @@ ANIMATION_FPS=24
 APP_LICENSE=GNU General Public License
 ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=false
-APP_AUTHOR=SAUL PINA, JORGE PARRA
+APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
