--- a/CONFIG.properties
+++ b/CONFIG.properties
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Tue Oct 14 12:13:09 VET 2014
+#Sat Dec 06 22:48:44 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
@@ -14,10 +14,10 @@ ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=false
 APP_AUTHOR=SAUL PIёA, JORGE PARRA
 LOG_LEVEL=DEVEL
-PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
+PATH_LIBARIA=C\:\\Program Files (x86)\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
-JAVA_VERSION=1.7.0_60
+JAVA_VERSION=1.8.0_25
 OS_ARCH=x86
 APP_NAME=Aria Java P3DX
 ROBOT_MAXSPEED=500
