--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Sat Dec 13 22:51:59 VET 2014
+#Sat Dec 13 23:09:46 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
@@ -14,6 +14,7 @@ ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=true
 APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
+ANIMATION_SHOWPATH=true
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
