Agregado url a ventana de ayuda

--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,15 +1,16 @@
 #CONFIGURATION
-#Sat Dec 13 23:09:46 VET 2014
+#Sat Dec 13 23:33:17 VET 2014
 ANIMATION_STROKESIZE=2
 OS=Windows 7
 TRANSLATE=es_VE
 ANIMATION_POSITIONUPDATERATE=10
 HOST_PORT=8101
+APP_URL=https\://bitbucket.org/sauljabin/ariajava-p3dx
 ANIMATION_MINPROPORTION=10
 PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
 ANIMATION_FPS=24
-APP_LICENSE=GNU General Public License
+APP_LICENSE=MIT
 ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=true
 APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
@@ -18,7 +19,7 @@ ANIMATION_SHOWPATH=true
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
-OS_ARCH=x86
 JAVA_VERSION=1.7.0_25
-APP_NAME=Aria Java P3DX
-ROBOT_MAXSPEED=500
+OS_ARCH=x86
+APP_NAME=AriaJavaP3DX
+ROBOT_MAXSPEED=300
