--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,6 +1,7 @@
 #CONFIGURATION
-#Sat Dec 13 23:33:17 VET 2014
+#Mon Dec 15 13:43:09 VET 2014
 ANIMATION_STROKESIZE=2
+APP_DOCUMENTACION=others/paper/articulo.pdf
 OS=Windows 7
 TRANSLATE=es_VE
 ANIMATION_POSITIONUPDATERATE=10
@@ -19,7 +20,7 @@ ANIMATION_SHOWPATH=true
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
-JAVA_VERSION=1.7.0_25
+JAVA_VERSION=1.7.0_60
 OS_ARCH=x86
 APP_NAME=AriaJavaP3DX
 ROBOT_MAXSPEED=300
