Agregados valores a mision planner

--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Sat Jan 10 12:32:49 VET 2015
+#Sat Jan 10 13:48:40 VET 2015
 ANIMATION_STROKESIZE=1
 APP_DOCUMENTACION=others/paper/articulo.pdf
 OS=Windows 7
@@ -17,10 +17,13 @@ ANIMATION_ANTIALIASING=true
 APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
 ANIMATION_SHOWPATH=true
+ROBOT_SLEEPTIME=200
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
 GUI_MAXIMIZED=true
 HOST_SERVER=localhost
 OS_ARCH=x86
 JAVA_VERSION=1.7.0_25
 APP_NAME=AriaJavaP3DX
+ROBOT_ERRORDISTANCE=30.0
+ROBOT_ERRORANGLE=1.0
 ROBOT_MAXSPEED=150
