Completado deteccion de obstaculos

--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,5 +1,5 @@
 #CONFIGURATION
-#Sat Jan 10 17:00:38 VET 2015
+#Sat Jan 10 19:02:02 VET 2015
 ANIMATION_STROKESIZE=1
 APP_DOCUMENTACION=others/paper/articulo.pdf
 OS=Windows 7
@@ -16,6 +16,7 @@ ANIMATION_PROPORTION=30
 ANIMATION_ANTIALIASING=true
 APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
 LOG_LEVEL=DEVEL
+ROBOT_SONARANGLE=45
 ANIMATION_SHOWPATH=true
 ROBOT_SLEEPTIME=200
 PATH_LIBARIA=C\:\\Program Files\\MobileRobots\\ARIA\\bin\\
@@ -25,6 +26,6 @@ HOST_SERVER=localhost
 JAVA_VERSION=1.7.0_25
 OS_ARCH=x86
 APP_NAME=AriaJavaP3DX
-ROBOT_ERRORANGLE=1.0
+ROBOT_ERRORANGLE=2.0
 ROBOT_ERRORDISTANCE=30.0
-ROBOT_MAXSPEED=150
+ROBOT_MAXSPEED=200
