Terminada seccion experimentos en paper

--- a/CONFIG.props
+++ b/CONFIG.props
@@ -1,10 +1,10 @@
 #CONFIGURATION
-#Sat Jan 24 17:54:59 VET 2015
+#Sat Jan 24 22:17:38 VET 2015
 ANIMATION_STROKESIZE=2
 APP_DOCUMENTACION=others/paper/articulo.pdf
 OS=Windows 7
 TRANSLATE=es_VE
-ANIMATION_POSITIONUPDATERATE=10
+ANIMATION_POSITIONUPDATERATE=5
 HOST_PORT=8101
 APP_URL=https\://bitbucket.org/sauljabin/ariajava-p3dx
 ANIMATION_MINPROPORTION=10
@@ -12,9 +12,9 @@ PATH_IMAGES=images/
 PATH_TRANSLATE=translate/
 ANIMATION_FPS=24
 APP_LICENSE=MIT
-ANIMATION_PROPORTION=20
-ANIMATION_ANTIALIASING=true
-APP_AUTHOR=SAÚL PIÑA, JORGE PARRA
+ANIMATION_PROPORTION=65
+ANIMATION_ANTIALIASING=false
+APP_AUTHOR=Jorge Parra, Saúl Piña
 LOG_LEVEL=DEVEL
 ROBOT_SONARANGLE=45
 ANIMATION_SHOWPATH=true
